--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Les bateaux</h1>
-<% @boats.each do |boat| %>
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
-<%= link_to boat.name, boat_path(boat) %></div>
-<% end %>
+<div class="cards">
+  <% @boats.each do |boat| %>
+      <div> <%= link_to boat.name, boat_path(boat) %></div>
+  <% end %>
+</div>
