--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,14 +1,15 @@
 .card-trip {
   overflow: hidden;
   background: white;
+  color: #333333;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 4px;
+  margin-bottom: 1rem;
 }
 
-.card-trip > img {
-  height: 200px;
-  width: 100%;
-  object-fit: cover;
+.card-trip:hover {
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  cursor: pointer;
 }
 
 .card-trip h2 {
@@ -17,20 +18,15 @@
   margin: 0;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis 
+  text-overflow: ellipsis;
 }
 
 .card-trip p {
   font-size: 12px;
   opacity: .7;
-  margin: 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis 
-}
-
-.card-text {
-  width: 80%;
 }
 
 .card-trip-img {
@@ -41,27 +37,25 @@
   position: relative;
 }
 
-.card-trip .card-trip-infos {
-  padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  position: relative;
-
-}
-
-.card-trip-infos .card-trip-user {
-  position: absolute;
-  right: 16px;
-  top: 20px;
-  width: 40px;
+.card-trip-infos {
+  margin: 16px;
 }
 
 .card-trip-pricing {
   position: absolute;
   right: 16px;
   top: 16px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.85);
   padding: 8px 8px;
   border-radius: 4px;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card-trip-pricing > h6 {
+  margin: 0px;
+  font-size: 14px;
+  
 }
