--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,9 +23,9 @@
     </form>
   </div>
 </div>
-<%# <div>
+<div>
   <h1>Hello</h1>
     <img src="/assets/images/logobig.png" alt="Logo" width="460" height="345" class="img">
   </div>
-</div> %>
+</div>
 
