Create form for the booking & index design

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,9 +23,10 @@
     </form>
   </div>
 </div>
-<div>
+<%# <div>
   <h1>Hello</h1>
-    <img src="/assets/images/logobig.png" alt="Logo" width="460" height="345" class="img">
-  </div>
-</div>
+    <%# <img image_tagsrc="/assets/images/logobig.png" alt="Logo" width="460" height="345" class="img"> %>
+     <%# <%= image_tag "logobig.png", class: "img", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+  <%# </div>
+</div> %>
 
