--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -9,13 +9,13 @@
           <div class="card-trip ">
             <div class="card-trip-img " style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= boat.photo.attached? ? cl_image_path(boat.photo.key) : asset_path('list_background.jpg') %>)">
               <div class="card-trip-pricing ">
-                <h2>CHF 99.99</h2>
+                <h2>CHF <%= boat.price %></h2>
                 <h6>par jour</h6>
               </div>
             </div>
             <div class="card-trip-infos ">
-                <h2><%= boat.name.capitalize %></h2>
-                <p><%= boat.description %></p>
+              <h2><%= boat.name.capitalize %></h2>
+              <p><%= boat.description %></p>
             </div>
           </div>
         <% end %>
