--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,10 @@
 <h1>I BOAT YOU</h1>
   <div class="card">
     <h2>Book your experience</h2>
-    <form action="#">
+    <form action="/boats">
     <div class="form-group">
       <label for="">Lieu de départ</label>
-      <input type="text" placeholder="Lausanne, Vevey.....">
+      <input name="address" type="text" placeholder="Lausanne, Vevey.....">
     </div>
 
     <div class="form-group">
