--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,4 +1,9 @@
-<div class="container mx-auto">
+<div id="map"
+    style="width: 100%; height: 50vh; position: fixed; top: 60px; z-index: 9;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
+<div class="container mx-auto" style="margin-top: 65vh;">
   <h1 class="my-5">Les bateaux</h1>
   
   
