Replaced location by address at the model & Add margin at index show

--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -3,7 +3,7 @@
 <div class="card-show mt-3 container">
   <div class="mt-3">
     <h2 class="mt-2"><strong>Name: </strong><%= @boat.name.capitalize %></h2>
-    <h2 class="mt-2"><strong>Location: </strong><%= @boat.location %></h2>
+    <h2 class="mt-2"><strong>Location: </strong><%= @boat.address %></h2>
     <h2 class="mt-2"><strong>Price: </strong><%= @boat.price %> CHF.- par jour</h2>
     <br>
     <p><%= @boat.description %></p>
