--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -4,8 +4,7 @@
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
 <div class="container mx-auto" style="margin-top: 65vh;">
-  <h1 class="my-5">Les bateaux</h1>
-  
+  <h1 class="my-5">Les bateaux trouvés</h1>
   
   <div class="row">
     <% @boats.each do |boat| %>
