trying to add zip code and city

--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -20,6 +20,7 @@
             <div class="card-trip-infos ">
               <h2><%= boat.name.capitalize %></h2>
               <p><%= boat.description %></p>
+              <p><%= boat.zip_code %> <%= boat.city %></p>
             </div>
           </div>
         <% end %>
