--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,6 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <%# <li class="nav-item active">
-          <%= link_to "About us", root_path, class: "nav-link" %>
-        <%# </li> %>
         <li class="nav-item">
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
@@ -27,6 +24,9 @@
           </div>
         </li>
       <% else %>
+        <li class="nav-item active">
+          <%= link_to "Rent your boat!", new_boat_path, class: "nav-link" %>
+        </li>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path, class: "nav-link" %>
         </li>
