--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -26,7 +26,8 @@
   opacity: .7;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis 
+  text-overflow: ellipsis;
+  margin-bottom: 4px;
 }
 
 .card-trip-img {
