--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,6 +20,7 @@
             <%= link_to "My boat", "#", class: "dropdown-item" %>
             <%= link_to "My profil", "#", class: "dropdown-item" %>
             <%= link_to "My bookings", "#", class: "dropdown-item" %>
+            <%= link_to "Add boat", new_boat_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
