--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="banner" style="background-image: url(<%= asset_url('background.jpg')%>);">
 <h1 class="mt-3">I BOAT YOU</h1>
   <div class="card">
-    <h2>Book your experience</h2>
+    <h2>La solution idéale pour votre location de bateau</h2>
     <form action="/boats">
     <div class="form-group">
       <label for="">Lieu de départ</label>
