--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,10 +26,10 @@
         </li>
       <% else %>
         <li class="nav-item active">
-          <%= link_to "Rent your boat!", new_boat_path, class: "nav-link" %>
+          <%= link_to "Enregistrez votre bateau", new_boat_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Connection", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
