Modification of button style

--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -10,7 +10,7 @@
         <%= f.input :price %>
         <%= f.input :photo, as: :file %>
 
-        <%= f.button :submit, "Add your boat!", class: "btn btn-primary btn-lg"%>
+        <%= f.button :submit, "Add your boat!", class: "btn btn-clr btn-lg"%>
       </div>
     </div>
   <% end %>
