--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Send me reset instructions", class: "btn btn-primary btn-lg w-100" %>
+      <%= f.button :submit, "Send me reset instructions", class: "btn btn-clr btn-lg w-100" %>
     </div>
   <% end %>
 
