--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -17,7 +17,7 @@
     <br>
     <br>
     <% if @boat.user != current_user %>
-      <input type="button" value="Book now!" class="btn btn-primary btn-lg w-100">
+      <input type="button" value="Book now!" class="btn btn-clr btn-lg w-100">
     <% end %>
   </div>
   <div class="">
