--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up", class: "btn btn-primary btn-lg w-100"%>
+      <%= f.button :submit, "Sign up", class: "btn btn-clr btn-lg w-100"%>
     </div>
   <% end %>
 
