--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
       <input type="text" placeholder="15/08/2021">
     </div>
 
-      <input type="submit" value="Rechercher" class="btn btn-primary btn-lg w-100">
+      <input type="submit" value="Rechercher" class="btn btn-clr btn-lg w-100">
     </form>
   </div>
 </div>
