--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,17 +3,17 @@
   <div class="banner-title search">
     <h2>Reservez votre prochaine aventure</h2>
     <form action="/boats">
-    <div class="form-group">
+    <div class="form-group home">
       <label for="">Lieu de départ</label>
       <input name="address" type="text" placeholder="Lausanne, Vevey.....">
     </div>
 
-    <div class="form-group">
+    <div class="form-group home">
       <label for="">Date de début</label>
       <input type="text" placeholder="15/08/2021">
     </div>
 
-    <div class="form-group">
+    <div class="form-group home">
       <label for="">Date de fin</label>
       <input type="text" placeholder="15/08/2021">
     </div>
