--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
         <li class="nav-item dropdown">
           <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My boat", "#", class: "dropdown-item" %>
+            <%= link_to "My boat", my_boats_path, class: "dropdown-item" %>
             <%= link_to "My profil", "#", class: "dropdown-item" %>
             <%= link_to "My bookings", "#", class: "dropdown-item" %>
             <%= link_to "Add boat", new_boat_path, class: "dropdown-item" %>
