--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -9,7 +9,6 @@
 
 <div class="card-show mt-3 container">
   <div class="mt-3">
-    <form action="/boats/:boat_id/bookings/new">
     <h2 class="mt-2"><strong>Name: </strong><%= @boat.name.capitalize %></h2>
     <h2 class="mt-2"><strong>Location: </strong><%= @boat.address %></h2>
     <h2 class="mt-2"><strong>Price: </strong><%= @boat.price %> CHF.- par jour</h2>
@@ -18,7 +17,8 @@
     <br>
     <br>
     <% if @boat.user != current_user %>
-      <input type="button" value="Book now!" class="btn btn-clr btn-lg w-100">
+      <%= link_to "Book now!",  new_boat_booking_path(@boat), class: "btn btn-clr btn-lg w-100" %>
+      <input type="button" value="Book now!" class="btn btn-clr btn-lg w-100" action="/boats/:boat_id/bookings/new">
     <% end %>
   </div>
   <div class="">
