change file extension for hone image

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= asset_url('lake.jpeg')%>); object-fit: cover">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= asset_url('lake.jpg')%>); object-fit: cover">
   <div class="banner-title search">
     <h2>Reservez votre prochaine aventure</h2>
     <form action="/boats">
