--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -1,17 +1,31 @@
-<div>
-  <% if @boat.user != current_user %>
-    <h1>Location bateau avec ou sans permis</h1>
-  <% else %>  
-    <h1>Here is your boat!</h1>
-  <% end %>
+<div class="img-show" style="background-image: linear-gradient(rgba(0,0,0,0.30), rgba(0,0,0,0.20)), url(<%= @boat.photo.attached? ? cl_image_path(@boat.photo.key) : asset_path('list_background.png') %>)">
+  <div>
+    <h1><%= @boat.name.capitalize %></h1>
+    <div class="img-show-infos">
+      <p>Taille : <strong><%= @boat.size %></strong></p>
+      <p>N° de passager : <strong><%= @boat.capacity %></strong></p>
+      <p>Moteur : <strong><%= @boat.hp %></strong></p>
+    </div>
+    <% if @boat.user != current_user %>
+      <%= link_to "Reservez!",  new_boat_booking_path(@boat), class: "btn btn-clr btn-lg w-100" %>
+    <% end %>
+  </div>
 </div>
 
 
-<div class="card-show mt-3 container">
+
+<div class="container my-5">
+  <div>
+    <% if @boat.user != current_user %>
+      <h1>Location bateau avec ou sans permis</h1>
+    <% else %>  
+      <h1>Here is your boat!</h1>
+    <% end %>
+  </div>
   <div class="mt-3">
-    <h2 class="mt-2"><strong>Name: </strong><%= @boat.name.capitalize %></h2>
-    <h2 class="mt-2"><strong>Location: </strong><%= @boat.address %></h2>
-    <h2 class="mt-2"><strong>Price: </strong><%= @boat.price %> CHF.- par jour</h2>
+    <h2 class="mt-2"><strong>Nom : </strong><%= @boat.name.capitalize %></h2>
+    <h2 class="mt-2"><strong>Port : </strong><%= @boat.address %></h2>
+    <h2 class="mt-2"><strong>Prix à la journée :</strong> CHF <%= '%.2f' % @boat.price.round(2) %></h2>
     <br>
     <p><%= @boat.description %></p>
     <br>
@@ -21,7 +35,6 @@
     <% end %>
   </div>
   <div class="">
-    <%= @boat.photo.attached? ? cl_image_tag(@boat.photo.key, class: "card-show-img") : image_tag('list_background.png', class: "card-show-img")%>
   </div>
 </div>
 
