--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -3,11 +3,11 @@
     <h1><%= @boat.name.capitalize %></h1>
     <div class="img-show-infos">
       <p>Taille : <strong><%= @boat.size %></strong></p>
-      <p>N° de passager : <strong><%= @boat.capacity %></strong></p>
-      <p>Moteur : <strong><%= @boat.hp %></strong></p>
+      <p>N° de passagers : <strong><%= @boat.capacity %></strong></p>
+      <p>Moteur : <strong><%= @boat.hp %> cv</strong></p>
     </div>
     <% if @boat.user != current_user %>
-      <%= link_to "Reservez!",  new_boat_booking_path(@boat), class: "btn btn-clr btn-lg w-100" %>
+      <%= link_to "Reservez !",  new_boat_booking_path(@boat), class: "btn btn-clr btn-lg w-100" %>
     <% end %>
   </div>
 </div>
@@ -15,24 +15,31 @@
 
 
 <div class="container my-5">
-  <div>
+  <div class="d-flex justify-content-between px-4" >
     <% if @boat.user != current_user %>
-      <h1>Location bateau avec ou sans permis</h1>
+      <h2>Location bateau avec ou sans permis</h2>
     <% else %>  
-      <h1>Here is your boat!</h1>
+      <h2>Here is your boat!</h2>
     <% end %>
+    <%= link_to "Retour à la liste", request.referer.present? ? request.referer : default_path, class: "btn btn-clr btn-lg"  %>
   </div>
-  <div class="mt-3">
-    <h2 class="mt-2"><strong>Nom : </strong><%= @boat.name.capitalize %></h2>
-    <h2 class="mt-2"><strong>Port : </strong><%= @boat.address %></h2>
-    <h2 class="mt-2"><strong>Prix à la journée :</strong> CHF <%= '%.2f' % @boat.price.round(2) %></h2>
-    <br>
-    <p><%= @boat.description %></p>
-    <br>
-    <br>
-    <% if @boat.user != current_user %>
-      <%= link_to "Book now!",  new_boat_booking_path(@boat), class: "btn btn-clr btn-lg w-100" %>
-    <% end %>
+  <div class="my-4 show-info">
+    <div style="width: 50%; padding: 40px;">
+    
+      <h6 class="mt-2"><strong>Nom : </strong><%= @boat.name.capitalize %></h6>
+      <h6 class="mt-2"><strong>Taille : </strong><%= @boat.size %></h6>
+      <h6 class="mt-2"><strong>N° de passagers : </strong><%= @boat.capacity %></h6>
+      <h6 class="mt-2"><strong>Moteur : </strong><%= @boat.hp %> cv</h6>
+      <h6 class="mt-2"><strong>Port : </strong><%= @boat.address %></h6>
+      <h6 class="mt-2"><strong>Prix à la journée :</strong> CHF <%= '%.2f' % @boat.price.round(2) %></h6>
+      <p class="mt-5"><strong>Déscription : </strong><%= @boat.description %></p>
+    </div>
+    <div id="map"
+      style="width: 50%; min-height: 50vh; border-radius: 0px 8px 8px 0px;"
+      data-markers=<%= @markers.to_json %>
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+ 
   </div>
   <div class="">
   </div>
