Style fixs container & modification of languages

--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto" >
-  <h1 class="mb-4">My boat</h1>
+  <h1 class="mb-4">Mon nouveau bateau!</h1>
     <div class="container mx-auto">
     <%= simple_form_for @boat do |f| %>
       <div class="personal-information">
