--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,3 +10,8 @@
   color: azure;
   box-shadow: 0px 0px 4px 2px rgba(0,0,0,.1);
 }
+
+.bar-add-delete-edit {
+  display: flex;
+  justify-content: space-between;
+}
