--- a/app/views/boats/my_boats.html.erb
+++ b/app/views/boats/my_boats.html.erb
@@ -1,15 +1,25 @@
-<h1>My boats</h1>
-<% @my_boats.each do |my_boat| %>
-  <div class="card-show mt-3 container">
-    <div class="mt-3">
-      <h2 class="mt-2"><strong>Name: </strong><%= my_boat.name.capitalize %></h2>
-      <h2 class="mt-2"><strong>Location: </strong><%= my_boat.address %></h2>
-      <h2 class="mt-2"><strong>Price: </strong><%= my_boat.price %> CHF.- par jour</h2>
-    </div>
+<div class="container margin-top: 5em">
+  <div class="bar-add-delete-edit">
     <div>
-      <%= link_to boat_path(my_boat) do %>
-        <%= my_boat.photo.attached? ? cl_image_tag(my_boat.photo.key, class: "card-show-img") : image_tag('list_background.png', class: "card-show-img")%>
-      <% end %>
+      <h1>Mes bateaux</h1>
+    </div>
+    <div class="">
+      <%= link_to "Ajouter un bateau", new_boat_path, class: "btn btn-clr btn-lg" %>
     </div>
   </div>
-<% end %>
+
+  <% @my_boats.each do |my_boat| %>
+    <div class="card-show mt-3 container">
+      <div class="mt-3">
+        <h2 class="mt-2"><strong>Name: </strong><%= my_boat.name.capitalize %></h2>
+        <h2 class="mt-2"><strong>Location: </strong><%= my_boat.address %></h2>
+        <h2 class="mt-2"><strong>Price: </strong><%= my_boat.price %> CHF.- par jour</h2>
+      </div>
+      <div>
+        <%= link_to boat_path(my_boat) do %>
+          <%= my_boat.photo.attached? ? cl_image_tag(my_boat.photo.key, class: "card-show-img") : image_tag('list_background.png', class: "card-show-img")%>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
