--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -1,27 +1,29 @@
-<div>
-  <% if @boat.user != current_user %>
-    <h1>Location bateau avec ou sans permis</h1>
-  <% else %>  
-    <h1>Here is your boat!</h1>
-  <% end %>
-</div>
-
-
-<div class="card-show mt-3 container">
-  <div class="mt-3">
-    <h2 class="mt-2"><strong>Name: </strong><%= @boat.name.capitalize %></h2>
-    <h2 class="mt-2"><strong>Location: </strong><%= @boat.address %></h2>
-    <h2 class="mt-2"><strong>Price: </strong><%= @boat.price %> CHF.- par jour</h2>
-    <br>
-    <p><%= @boat.description %></p>
-    <br>
-    <br>
+<div class="container">
+  <div>
     <% if @boat.user != current_user %>
-      <%= link_to "Book now!",  new_boat_booking_path(@boat), class: "btn btn-clr btn-lg w-100" %>
+      <h1>Location bateau avec ou sans permis</h1>
+    <% else %>  
+      <h1>Here is your boat!</h1>
     <% end %>
   </div>
-  <div class="">
-    <%= @boat.photo.attached? ? cl_image_tag(@boat.photo.key, class: "card-show-img") : image_tag('list_background.png', class: "card-show-img")%>
+
+
+  <div class="card-show mt-3 container">
+    <div class="mt-3">
+      <h2 class="mt-2"><strong>Name: </strong><%= @boat.name.capitalize %></h2>
+      <h2 class="mt-2"><strong>Location: </strong><%= @boat.address %></h2>
+      <h2 class="mt-2"><strong>Price: </strong><%= @boat.price %> CHF.- par jour</h2>
+      <br>
+      <p><%= @boat.description %></p>
+      <br>
+      <br>
+      <% if @boat.user != current_user %>
+        <%= link_to "Book now!",  new_boat_booking_path(@boat), class: "btn btn-clr btn-lg w-100" %>
+      <% end %>
+    </div>
+    <div class="">
+      <%= @boat.photo.attached? ? cl_image_tag(@boat.photo.key, class: "card-show-img") : image_tag('list_background.png', class: "card-show-img")%>
+    </div>
   </div>
 </div>
 
