--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="form-login-center">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <%# <h2>Edit <%= resource_name.to_s.humanize</h2> %>
+  <h2>Mon profil</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
@@ -25,7 +26,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update" %>
+      <%= f.button :submit, "Update", class: "btn btn-clr btn-lg w-100" %>
     </div>
   <% end %>
 
