--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,11 +17,11 @@
         <li class="nav-item dropdown">
           <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My boat", my_boats_path, class: "dropdown-item" %>
-            <%= link_to "My profil", "#", class: "dropdown-item" %>
-            <%= link_to "My bookings", "#", class: "dropdown-item" %>
-            <%= link_to "Add boat", new_boat_path, class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Mes bateaux", my_boats_path, class: "dropdown-item" %>
+            <%= link_to "Mon profil", edit_user_registration_path, class: "dropdown-item" %>
+            <%= link_to "Mes reservations", "#", class: "dropdown-item" %>
+            <%# <%= link_to "Add boat", new_boat_path, class: "dropdown-item" %>
+            <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
@@ -29,7 +29,7 @@
           <%= link_to "Enregistrez votre bateau", new_boat_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Connection", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Connexion", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
