--- a/app/views/boats/my_boats.html.erb
+++ b/app/views/boats/my_boats.html.erb
@@ -1,4 +1,4 @@
-<div class="container margin-top: 5em">
+<div class="container" style="margin-top: 5em">
   <div class="bar-add-delete-edit">
     <div>
       <h1>Mes bateaux</h1>
