--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto" >
+<div class="container mx-auto" style="margin-top: 5em" >
   <h1 class="mb-4">Mon nouveau bateau!</h1>
     <div class="container mx-auto">
     <%= simple_form_for @boat do |f| %>
@@ -6,6 +6,9 @@
         <h2>Boat information</h2>
         <%= f.input :name %>
         <%= f.input :address %>
+        <%= f.input :capacity %>
+        <%= f.input :size %>
+        <%= f.input :hp %>
         <%= f.input :description %>
         <%= f.input :price %>
         <%= f.input :photo, as: :file %>
