--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 5em">
   <div class="col-md-6 col-xs-12 booking-scroll">
     <div>
       <h3>Réserver!</h3> 
