--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My boat", my_boats_path, class: "dropdown-item" %>
             <%= link_to "My profil", "#", class: "dropdown-item" %>
-            <%= link_to "My bookings", "#", class: "dropdown-item" %>
+            <%= link_to "My bookings", my_bookings_path, class: "dropdown-item" %>
             <%= link_to "Add boat", new_boat_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
