--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -5,7 +5,7 @@
       <div class="personal-information">
         <h2>Boat information</h2>
         <%= f.input :name %>
-        <%= f.input :address %>
+        <%= f.input :address, label: "Port d'attache" %>
         <%= f.input :capacity %>
         <%= f.input :size %>
         <%= f.input :hp %>
