--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -3,7 +3,7 @@
     <div class="container mx-auto">
     <%= simple_form_for @boat do |f| %>
       <div class="personal-information">
-        <h2>Boat information</h2>
+        <h2>Information du bateau</h2>
         <%= f.input :name %>
         <%= f.input :address, label: "Port d'attache" %>
         <%= f.input :capacity %>
