front of my-bookking

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -14,3 +14,15 @@ $headers-font: "Open Sans", "Helvetica", "sans-serif";
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+
+h1 {
+  color: rgb(15, 51, 68);
+}
+
+h3 {
+  color: rgb(77, 77, 77);
+}
+
+h2 {
+  color: rgb(39, 38, 38);
+}
