--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -37,3 +37,7 @@
   justify-content: center;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
+
+.show-info:hover {
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
