Searched dates from home go till booking

--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <% @boats.each do |boat| %>
       <div class="co-12 colsm-6 col-md-4 mb-3">
-        <%= link_to boat_path(boat), class:'text-decoration-none' do %>
+        <%= link_to boat_path(boat, debut: params[:debut], fin: params[:fin]), class:'text-decoration-none' do %>
           <div class="card-trip ">
             <div class="card-trip-img " style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(<%= boat.photo.attached? ? cl_image_path(boat.photo.key) : asset_path('list_background.png') %>)">
               <div class="card-trip-pricing ">
