--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,20 +3,20 @@
   <div class="banner-title search">
     <h2>Reservez votre prochaine aventure</h2>
     <form action="/boats">
-    <div class="form-group home">
-      <label for="">Lieu de départ</label>
-      <input name="address" type="text" placeholder="Lausanne, Vevey.....">
-    </div>
+      <div class="form-group home">
+        <label for="">Lieu de départ</label>
+        <input name="address" type="text" placeholder="Lausanne, Vevey.....">
+      </div>
 
-    <div class="form-group home">
-      <label for="">Date de début</label>
-      <input type="text" placeholder="15/08/2021">
-    </div>
+      <div class="form-group home">
+        <label for="">Date de début</label>
+        <input type="text" name="debut" placeholder="15/08/2021">
+      </div>
 
-    <div class="form-group home">
-      <label for="">Date de fin</label>
-      <input type="text" placeholder="15/08/2021">
-    </div>
+      <div class="form-group home">
+        <label for="">Date de fin</label>
+        <input type="text" name="fin" placeholder="15/08/2021">
+      </div>
       <input type="submit" value="Rechercher" class="btn btn-clr btn-lg w-100">
     </form>
   </div>
