--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -15,7 +15,7 @@
 
 
 <div class="container my-5">
-  <div class="d-flex justify-content-between px-4" >
+  <div class="d-flex justify-content-between" >
     <% if @boat.user != current_user %>
       <h2>Location bateau avec ou sans permis</h2>
     <% else %>  
