--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,19 +5,19 @@
     <form action="/boats">
       <div class="form-group home">
         <label for="">Lieu de départ</label>
-        <input name="address" type="text" placeholder="Lausanne, Vevey.....">
+        <input name="address" type="text" placeholder="Lausanne, Vevey....." style="width: 170px; height: 36px;">
       </div>
 
       <div class="form-group home">
         <label for="">Date de début</label>
-        <input type="text" name="debut" placeholder="15/08/2021">
+        <input type="date" name="debut" placeholder="15/08/2021" style="width: 170px; height: 36px;">
       </div>
 
       <div class="form-group home">
         <label for="">Date de fin</label>
-        <input type="text" name="fin" placeholder="15/08/2021">
+        <input type="date" name="fin" placeholder="15/08/2021" style="width: 170px; height: 36px;">
       </div>
-      <input type="submit" value="Rechercher" class="btn btn-clr btn-lg w-100">
+      <input type="submit" value="Rechercher" class="btn btn-clr btn-lg w-100" >
     </form>
   </div>
   <div class="banner-title">
