--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="form-login-center">
+<div class="form-login-center" style="margin-top: 8em">
   <%# <h2>Edit <%= resource_name.to_s.humanize</h2> %>
   <h2>Mon profil</h2>
 
